# GanderBattle

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  clang-format_sources.sh
emscripten/: .gitattributes  Makefile  shell.html
emscripten/raylib/: .gitattributes
gimp/: GanderSchwartzCloaked.xcf
mingw_64/: .gitattributes  CMakeLists.txt
src/: CMakeLists.txt  constants.cc  constants.h  ems.h  main.cc  resource_handler.cc  resource_handler.h  screen.cc  screen.h  screen_battle.cc  screen_battle.h  screen_blank.cc  screen_blank.h  screen_debug.cc  screen_debug.h  shared_data.cc  shared_data.h
src_build/: rp_main.cpp
story/: 2024-05-07_game_format.md  2024-05-07_premise.md
